--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<java.version>1.8</java.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<sonar.organization>vishnutk97</sonar.organization>
+		<sonar.organization>Vishnutk97</sonar.organization>
 	</properties>
 	<dependencies>
 	  <dependency>
