--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<sonar.organization>Vishnutk97</sonar.organization>
+		<sonar.login>vishnutk97</sonar.login>		
 	</properties>
 	<dependencies>
 	  <dependency>
