--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<sonar.organization>Vishnutk97</sonar.organization>
-		<sonar.projectKey>vishnutk97</sonar.projectKey>		
+		<sonar.projectKey>vishnutk97</sonar.projectKey>	
+		<sonar.projectName>sample</sonar.projectName>
 	</properties>
 	<dependencies>
 	  <dependency>
