--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<sonar.organization>vishnutk97</sonar.organization>
 		<sonar.projectKey>vishnutk97</sonar.projectKey>	
-		<sonar.projectName>sample</sonar.projectName>
+		<sonar.projectName>java-sample-project</sonar.projectName>
 	</properties>
 	<dependencies>
 	  <dependency>
